<resources>
    <string name="app_name">PlaNET</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Settings</string>
    <string name="sorted_by_deadline">Sort by Deadline</string>
    <string name="message_no_results">
        Oops, couldn\'t find any results\nthat matched your filter
    </string>
    <string name="all_works">All Works</string>
    <string name="header_filters">Filter</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="value_any_importance">Any Importance</string>
    <string name="importance_1">*</string>
    <string name="importance_2">**</string>
    <string name="importance_3">***</string>
    <string name="value_any_constraint">Any</string>
    <string name="constraint_le"><![CDATA[<=]]></string>
    <string name="constraint_eq">=</string>
    <string name="constraint_ge"><![CDATA[>=]]></string>
    <string name="showPast_false">Only Show Future Works</string>
    <string name="showPast_true">Show All Works</string>
    <string name="search_by_name">Search by Name</string>
    <string name="search_by_tag">Search by Tag</string>
    <string name="search_by_progress">Search by Progress (in %)</string>
    <string name="search_by_deadline">Search by Deadline</string>
    <string name="header_request">Request Header</string>
    <string name="input_work_name">Input Work Name</string>
    <string name="input_work_tag1">Tag 1 (Optional)</string>
    <string name="input_work_tag2">Tag 2 (Optional)</string>
    <string name="input_work_progress">Input Work Progress (in %)</string>
    <string name="input_work_importance">Input Importance</string>
    <string name="input_work_deadline">Input Work Deadline</string>
    <string name="input_work_deadline_remark">
        Remark: the deadline is in format yyyy/MM/dd HH:mm:ss
    </string>
    <string name="done">Done</string>
    <string name="hasTags_true">Has Tag(s)</string>
    <string name="hasTags_false">Does not have Tag(s)</string>
    <string name="input_icon">Select Icon</string>
    <string name="icon_default">Default</string>
    <string name="icon_exam">Exam</string>
    <string name="icon_homework">Homework</string>
    <string name="icon_laboratory">Laboratory</string>
    <string name="icon_meeting">Meeting</string>
    <string name="icon_payment">Payment</string>
    <string name="icon_presentation">Presentation</string>
    <string name="icon_project">Project</string>
    <string name="icon_reading">Reading</string>
    <string name="create_work">Create Work</string>
    <string name="edit_work">Edit Work</string>
    <string name="recommended_task">Recommended Task</string>
    <string name="work_statistics">Work Statistics</string>
    <string name="all_tasks">All Tasks: </string>
    <string name="completed_tasks">Completed Tasks: </string>
    <string name="to_do_tasks">To-do Tasks: </string>
    <string name="actions">Actions</string>
    <string name="add_task">Add Task</string>
    <string name="log_out">Log Out</string>
    <string name="work_ddl">Deadline: %1$s</string>
    <string name="work_progress">Progress: %1$d%%</string>
    <string name="work_importance">Importance: %1$s</string>
    <string name="work_tags">Tags: %1$s</string>
    <string name="user_stat_all">All Tasks: %1$d</string>
    <string name="user_stat_completed">Completed Tasks: %1$d</string>
    <string name="user_stat_todo">To-do Tasks: %1$d</string>
    <string name="rest_name">No more task</string>
    <string name="rest_tags">Take some rest…</string>
    <string name="rest_progress">100%</string>
    <string name="rest_ddl">No deadline</string>
    <string name="delete_work">Delete Work</string>
    <string name="back_home">Back Home</string>
    <string name="include_work_description">Include work description here\nClick \"Edit Work\"
        or \"Back Home\" to save</string>
    <string name="description">Description:</string>
    <string name="work_description_updated">Work description updated</string>
    <string name="time0">Don\'t remind me</string>
    <string name="time1">15 minutes prior</string>
    <string name="time2">30 minutes prior</string>
    <string name="time3">1 hour prior</string>
    <string name="time4">6 hour prior</string>
    <string name="time5">12 hour prior</string>
    <string name="time6">1 day prior</string>
    <string name="time7">2 days prior</string>
    <string name="enable_notification">Enable Notification</string>
    <string name="remind_me">Remind me there\'s an event:</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="update_setting">Update Setting</string>
    <string name="time_zone">Time Zone:</string>
    <string name="input_time_zone">Input Time Zone</string>
    <string name="invalid_input">Your input is invalid, please check again</string>
    <string name="setting_updated">Setting updated</string>
    <string name="settings_remark">Remark: restart the app to see the change in dark mode</string>

    <string-array name="constraint">
        <item>@string/value_any_constraint</item>
        <item>@string/constraint_eq</item>
        <item>@string/constraint_le</item>
        <item>@string/constraint_ge</item>
    </string-array>

    <string-array name="importance">
        <item>@string/value_any_importance</item>
        <item>@string/importance_1</item>
        <item>@string/importance_2</item>
        <item>@string/importance_3</item>
    </string-array>

    <string-array name="work_importance">
        <item>@string/input_work_importance</item>
        <item>@string/importance_1</item>
        <item>@string/importance_2</item>
        <item>@string/importance_3</item>
    </string-array>

    <string-array name="time">
        <item>@string/time0</item>
        <item>@string/time1</item>
        <item>@string/time2</item>
        <item>@string/time3</item>
        <item>@string/time4</item>
        <item>@string/time5</item>
        <item>@string/time6</item>
        <item>@string/time7</item>
    </string-array>

    <string-array name="showPast">
        <item>@string/showPast_false</item>
        <item>@string/showPast_true</item>
    </string-array>

    <string-array name="icons">
        <item>@string/input_icon</item>
        <item>@string/icon_default</item>
        <item>@string/icon_exam</item>
        <item>@string/icon_homework</item>
        <item>@string/icon_laboratory</item>
        <item>@string/icon_meeting</item>
        <item>@string/icon_payment</item>
        <item>@string/icon_presentation</item>
        <item>@string/icon_project</item>
        <item>@string/icon_reading</item>
    </string-array>

    <string-array name="has_tags">
        <item>@string/hasTags_true</item>
        <item>@string/hasTags_false</item>
    </string-array>
</resources>